# toy-json-lib

./: CMakeLists.txt  README.md  leptjson.c
.github/workflows/: cmake.yml
src/: leptjson.c  leptjson.h
tests/: test.c
